AgriStore/force-app/main/default/objects/Maintenance_Log__c/Maintenance_Log__c.object-meta.xml
<CustomObject>
    <label>Maintenance Log</label>
    <pluralLabel>Maintenance Logs</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Maintenance Log Number</label>
        <displayFormat>ML-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Equipment maintenance and health tracking logs for AgriStore</description>
</CustomObject>