AgriStore/force-app/main/default/objects/Maintenance_Log__c/validationRules/AgriStore_Maintenance_Date_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>AgriStore_Maintenance_Date_Valid</fullName>
    <active>true</active>
    <description>Ensures maintenance date is not in the future</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Maintenance_Date__c)),
    Maintenance_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Maintenance_Date__c</errorDisplayField>
    <errorMessage>Maintenance date cannot be in the future. Please enter the actual maintenance date.</errorMessage>
</ValidationRule>